# inf-timestamper

./: .gitignore  CLAUDE.md  InfTimestamper.sln  InfTimestamper.spec  InfinitasTimestamper.spec  LICENSE.txt  README.md  app_di.py  build.bash  bump-version.bash  lint-all.bash  lint_all.bash  main.py  pyproject.toml  pyrightconfig.json  replacer.spec  updater.spec  version_up.bash
.github/workflows/: build_release.yml  pr-check.yml
app_resources/: settings.json
core/: app_module.py  logger_module.py
docs/: data-preparation.md  release.md  実装計画.md  要件.md
domain/entity/: game.py  game_format.py  settings.py  stream.py  stream_entity.py
domain/port/: play_watcher.py  stream_gateway.py
domain/service/: stream_service.py
domain/value/: base_path.py  stream.py
infrastructure/: file_accessor.py  file_stream_session_repository.py  in_memory_current_stream_session_repository.py  obs_connector_v4.py  obs_connector_v5.py  reflux_file_watcher.py  setting_repository.py  stream_session_repository.py
src/InfTimestamper/: App.xaml  App.xaml.cs  InfTimestamper.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
src/InfTimestamper.Core/: InfTimestamper.Core.csproj
src/mock_obs_ws/: handler.py
src/replacer/: main.py
src/updater/: consts.py  main.py
tests/InfTimestamper.Core.Tests/: InfTimestamper.Core.Tests.csproj  SanityTests.cs  UlidTests.cs
tools/: generate_songs_json.ps1
tools/ColorAnalyzer/: ColorAnalyzer.csproj  Program.cs
tools/HashExtractor/: HashExtractor.csproj  (+2 more)
usecase/: output_use_case.py  play_recording_use_case.py  settings_use_case.py
(+260 files in other folders)
