[project]
name = "infinitas-timestamper"
version = "0.3.0"
description = "INFINITAS向けタイムスタンプ生成ツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "injector>=0.22.0",
    "obs-websocket-py>=1.0",
    "obsws-python>=1.8.0",
    "pydantic>=2.11.9",
    "pyinstaller>=6.16.0",
    "pyperclip>=1.10.0",
    "pyside6>=6.9.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "pyright>=1.1.405", "ruff>=0.13.2", "websockets>=15.0.1"]

[tool.mypy]
python_version = "3.13"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true
mypy_path = "src/infinitas_timestamper"

[tool.ruff]
line-length = 120
exclude = ["build", "dist", ".venv", "src/mock_obs_ws"]
